--- a/style.css
+++ b/style.css
@@ -1,4 +1,49 @@
-p {
-    color: navy;
-    background-color: red;
+#home {
+    border: 1px solid black;
+    /* display: flex; */
+    text-align: left;
+    padding: 20px;
+    margin: 30px;
+    text-transform:capitalize;
+    /* justify-content: space-evenly; */
+    box-shadow: 10px 20px 20px black;
+    background-color: rgb(245, 229, 229);
+    text-shadow: 0px 1px 1px salmon;
+}
+
+h1 {
+  /* display: block; */
+  /* height: 200px;
+  width: 300px; */
+  /* position: absolute; */
+
+}
+
+.headd {
+    text-align: center;
+}
+#navigation{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    list-style-type: none;
+    margin-right: 30px;
+    background-color: goldenrod;
+    border:1px solid black;
+    border-radius: 10px;
+    
+
+}
+button:hover{
+    background-color: green;
+    color: white;
+
+}
+button{
+    background-color: greenyellow;
+    color: black;
+    border:2px solid black;
+    border-radius: 10px;
+    padding: 5px;
+    margin-right: 10px;
 }
